Background for index page

--- a/wp-content/themes/mc2015/css/_layout.sass
+++ b/wp-content/themes/mc2015/css/_layout.sass
@@ -2,10 +2,11 @@ main
 	position: relative
 
 	&.index
-		background-attachment: fixed !important
-		background-position: center !important
-		background-size: cover !important
-		background-repeat: no-repeat !important
+		background-attachment: fixed
+		background-color: black
+		background-position: center
+		background-size: cover
+		background-repeat: no-repeat
 		color: white
 		text-align: center
 
@@ -51,6 +52,7 @@ main
 				padding: 0
 
 		.prod-team
+			color: white
 			display: none !important
 
 	&:not(.index)
