--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -416,9 +416,7 @@ article {
   width: 100%;
   z-index: 999999999999999; }
   .navigation-menu .menu {
-    font-family: "suisse_works";
-    font-weight: bold;
-    text-transform: lowercase; }
+    font-weight: bold; }
   .navigation-menu .social-networks {
     display: none;
     margin: 0; }
