--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -200,6 +200,7 @@ article {
     position: relative;
     text-align: center; }
     .artist.thumb .artist-name {
+      display: block;
       font-size: 18px;
       font-weight: bold;
       padding: 6em 0;
@@ -207,6 +208,8 @@ article {
       z-index: 2;
       -webkit-transition: background-color 0.3s;
       transition: background-color 0.3s; }
+      .artist.thumb .artist-name:hover {
+        color: initial; }
     .artist.thumb .artist-link {
       display: none; }
     .artist.thumb .view-artist {
@@ -223,13 +226,6 @@ article {
         left: -webkit-calc(50% - 1px);
         left: calc(50% - 1px);
         position: absolute; }
-    .artist.thumb > a {
-      height: 100%;
-      left: 0;
-      position: absolute;
-      top: 0;
-      width: 100%;
-      z-index: 3; }
     .artist.thumb:before {
       background-color: rgba(255, 255, 255, 0.75);
       content: "";
@@ -738,6 +734,7 @@ article {
 .read-more,
 .view-artist {
   background-color: black;
+  border: 1px solid black;
   bottom: 3em;
   color: white;
   display: block;
@@ -745,11 +742,12 @@ article {
   font-weight: bold;
   padding: 0.25em 0.5em;
   text-transform: uppercase;
-  -webkit-transition: opacity 0.3s;
-  transition: opacity 0.3s; }
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s; }
   .read-more:hover,
   .view-artist:hover {
-    color: white; }
+    background-color: white;
+    color: black; }
 
 .select-display {
   font-size: 12px;
