--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -173,6 +173,9 @@ article
 	padding: 1em
 	position: relative
 
+	.call-to-action
+		display: block
+
 	.exhibition-content
 		background: white
 		height: 100%
