--- a/wp-content/themes/mc2015/css/icomoon.css
+++ b/wp-content/themes/mc2015/css/icomoon.css
@@ -1,15 +1,15 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?usgaf3');
-	src:url('fonts/icomoon.eot?#iefixusgaf3') format('embedded-opentype'),
-		url('fonts/icomoon.woff?usgaf3') format('woff'),
-		url('fonts/icomoon.ttf?usgaf3') format('truetype'),
-		url('fonts/icomoon.svg?usgaf3#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?x59jhs');
+	src:url('fonts/icomoon.eot?#iefixx59jhs') format('embedded-opentype'),
+		url('fonts/icomoon.woff?x59jhs') format('woff'),
+		url('fonts/icomoon.ttf?x59jhs') format('truetype'),
+		url('fonts/icomoon.svg?x59jhs#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 
-[class^="icon"], [class*=" icon"] {
+[class^="icon-"], [class*=" icon-"] {
 	font-family: 'icomoon';
 	speak: none;
 	font-style: normal;
@@ -76,9 +76,6 @@
 }
 .icon-instagram:before {
 	content: "\e610";
-}
-.icon-page:before {
-	content: "\e613";
 }
 .icon-menu:before {
 	content: "\e602";
