--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -15,7 +15,8 @@ article
 			margin-top: 0.25em
 
 .announcements
-	font-size: 17px
+	font-size: 15px
+	font-weight: 300
 	margin: 0 auto
 	text-align: center
 
@@ -23,7 +24,7 @@ article
 		display: inline-block
 		border: 3px solid
 		line-height: 1em
-		padding: 0.75em 1em
+		padding: 0.5em 0.7em
 
 .arrow
 	margin-top: 2em
@@ -261,8 +262,9 @@ article
 	margin-bottom: 1em
 
 .footer-items
-	font-size: 14px
-	font-weight: bold
+	font-size: 13px
+	font-weight: 500
+	letter-spacing: 0.05em
 	line-height: 1em
 	list-style-type: none
 	margin-bottom: 0
@@ -275,10 +277,11 @@ article
 
 .kc-ml-languages
 	display: none
+	letter-spacing: 0.1em
 	list-style-type: none
 	margin: 0
 	padding: 0
-	font-size: 12px
+	font-size: 10px
 	font-weight: 500
 
 	li
@@ -478,9 +481,9 @@ article
 .picture-credits
 	bottom: 0
 	display: none
-	font-size: 12px
-	font-weight: 500
+	font-size: 10px
 	line-height: 1em
+	margin-right: 0.5em
 	position: absolute
 	right: 0
 	text-align: center
