--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -61,7 +61,7 @@ article
 		background-position: center
 		background-repeat: no-repeat
 		background-size: cover
-		padding: 1em
+		padding: 0.7em
 		position: relative
 		text-align: center
 
@@ -81,7 +81,7 @@ article
 			display: none
 
 		.view-artist
-			left: calc(50% - 34px)
+			left: calc(50% - 42.5px)
 			opacity: 0
 			pointer-events: none
 			position: absolute
@@ -651,8 +651,9 @@ article
 	bottom: 3em
 	color: white
 	display: block
-	font-size: 10px
-	font-weight: bold
+	font-size: 9px
+	font-weight: 500
+	letter-spacing: 0.2em
 	padding: 0.25em 0.5em
 	text-transform: uppercase
 	transition: all 0.3s
@@ -662,8 +663,9 @@ article
 		color: black
 
 .select-display
-	font-size: 12px
+	font-size: 11px
 	font-weight: 500
+	letter-spacing: 0.2em
 	list-style-type: none
 	padding: 0
 	text-transform: uppercase
@@ -814,7 +816,7 @@ article
 			width: 100%
 
 			li
-				margin: 1em
+				margin: 0.5em
 				width: 250px
 
 			.artist-name
