--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -194,7 +194,7 @@ article {
     background-repeat: no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
-    padding: 1em;
+    padding: 0.7em;
     position: relative;
     text-align: center; }
     .artist.thumb .artist-name {
@@ -211,8 +211,8 @@ article {
     .artist.thumb .artist-link {
       display: none; }
     .artist.thumb .view-artist {
-      left: -webkit-calc(50% - 34px);
-      left: calc(50% - 34px);
+      left: -webkit-calc(50% - 42.5px);
+      left: calc(50% - 42.5px);
       opacity: 0;
       pointer-events: none;
       position: absolute; }
@@ -740,8 +740,9 @@ article {
   bottom: 3em;
   color: white;
   display: block;
-  font-size: 10px;
-  font-weight: bold;
+  font-size: 9px;
+  font-weight: 500;
+  letter-spacing: 0.2em;
   padding: 0.25em 0.5em;
   text-transform: uppercase;
   -webkit-transition: all 0.3s;
@@ -752,8 +753,9 @@ article {
     color: black; }
 
 .select-display {
-  font-size: 12px;
+  font-size: 11px;
   font-weight: 500;
+  letter-spacing: 0.2em;
   list-style-type: none;
   padding: 0;
   text-transform: uppercase; }
@@ -876,7 +878,7 @@ article {
     text-align: center;
     width: 100%; }
     .artists.thumb li {
-      margin: 1em;
+      margin: 0.5em;
       width: 250px; }
     .artists.thumb .artist-name {
       padding: 3em 0; }
