Single-artist adjustments

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -45,7 +45,7 @@ article
 			border-bottom: 2px solid transparent
 			color: black
 			display: inline-block
-			font-size: 19px
+			font-size: 17px
 			font-weight: 500
 			padding-bottom: 0.25em
 			text-decoration: none
@@ -130,7 +130,7 @@ article
 	width: 80%
 
 .events
-	bottom: 0
+	bottom: 2em
 	display: none
 	left: 2em
 	position: absolute
@@ -533,11 +533,7 @@ article
 
 	p
 		font-size: 14px
-
-		&:first-of-type
-			font-size: 20px
-			font-weight: bold
-			text-align: center
+		line-height: 1.8em
 
 .post-date
 	font-size: 12px
@@ -550,6 +546,7 @@ article
 	position: relative
 
 	figcaption
+		letter-spacing: 0.04em
 		margin-top: 0.5em
 
 		div
