--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -179,7 +179,7 @@ article {
       border-bottom: 2px solid transparent;
       color: black;
       display: inline-block;
-      font-size: 19px;
+      font-size: 17px;
       font-weight: 500;
       padding-bottom: 0.25em;
       text-decoration: none;
@@ -256,7 +256,7 @@ article {
   width: 80%; }
 
 .events {
-  bottom: 0;
+  bottom: 2em;
   display: none;
   left: 2em;
   position: absolute;
@@ -631,11 +631,8 @@ article {
 .post-content {
   position: relative; }
   .post-content p {
-    font-size: 14px; }
-    .post-content p:first-of-type {
-      font-size: 20px;
-      font-weight: bold;
-      text-align: center; }
+    font-size: 14px;
+    line-height: 1.8em; }
 
 .post-date {
   font-size: 12px;
@@ -647,6 +644,7 @@ article {
   margin: 0 auto;
   position: relative; }
   .post-gallery figcaption {
+    letter-spacing: 0.04em;
     margin-top: 0.5em; }
     .post-gallery figcaption div {
       font-size: 12px;
