--- a/wp-content/themes/mc2015/css/_layout.sass
+++ b/wp-content/themes/mc2015/css/_layout.sass
@@ -1,3 +1,14 @@
+body:not(.home)
+	position: relative
+
+	&:after
+		border-bottom: 10px solid black
+		bottom: 0
+		content: ''
+		position: fixed
+		width: 100%
+		z-index: 99999
+
 main
 	position: relative
 
