--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -3,6 +3,7 @@ article
 
 	&.exhibition
 		.post-title
+			margin-bottom: 0
 			margin-left: auto
 			margin-right: auto
 			max-width: 470px
@@ -608,6 +609,7 @@ article
 .post-subtitle
 	font-size: 20px
 	font-weight: bold
+	margin: 0 0 1.5em 0
 	text-align: center
 
 .post-title
