--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -9,11 +9,16 @@ article
 			max-width: 470px
 
 	&.post
+		margin-bottom: 7em
+
+		.post-actions
+			top: 0
+
 		.post-attachment-link
 			text-transform: uppercase
 			
 		.post-title
-			margin-top: 0.25em
+			margin-top: 0.1em
 
 .announcements
 	font-size: 15px
