--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -156,10 +156,14 @@ article {
     margin-left: auto;
     margin-right: auto;
     max-width: 470px; }
-  article.post .post-attachment-link {
-    text-transform: uppercase; }
-  article.post .post-title {
-    margin-top: 0.25em; }
+  article.post {
+    margin-bottom: 7em; }
+    article.post .post-actions {
+      top: 0; }
+    article.post .post-attachment-link {
+      text-transform: uppercase; }
+    article.post .post-title {
+      margin-top: 0.1em; }
 
 .announcements {
   font-size: 15px;
