--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -429,6 +429,7 @@ article
 		font-family: suisse_works
 		font-size: 14px
 		font-weight: bold
+		line-height: 1.5em
 		margin: 0 auto
 		max-width: 450px
 
@@ -436,7 +437,7 @@ article
 		font-size: 32px
 		font-weight: bold
 		margin: 0.5em auto
-		max-width: 370px
+		max-width: 400px
 
 	.read-more
 		display: inline-block
