--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -373,6 +373,7 @@ article
 			font-weight: bold
 			outline: none
 			padding: 0.25em 0.5em
+			width: 240px
 
 			+placeholder()
 				color: white
@@ -732,6 +733,7 @@ article
 	.contact-city-name
 		font-size: 12px
 		font-weight: bold
+		letter-spacing: 0.5em
 		margin-bottom: 0
 		text-transform: uppercase
 
@@ -750,6 +752,7 @@ article
 		font-family: 'suisse_works'
 		font-size: 16px
 		font-weight: bold
+		line-height: 1.5em
 		margin: 1em auto
 		max-width: 500px
 		text-align: center
