--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -483,7 +483,8 @@ article {
       font-size: 14px;
       font-weight: bold;
       outline: none;
-      padding: 0.25em 0.5em; }
+      padding: 0.25em 0.5em;
+      width: 240px; }
       .newsletter form input[type="email"]::-webkit-input-placeholder,
       .newsletter form input[type="text"]::-webkit-input-placeholder {
         color: white;
@@ -821,6 +822,7 @@ article {
 #the-gallery .contact-city-name {
   font-size: 12px;
   font-weight: bold;
+  letter-spacing: 0.5em;
   margin-bottom: 0;
   text-transform: uppercase; }
   #the-gallery .contact-city-name:after {
@@ -836,6 +838,7 @@ article {
   font-family: "suisse_works";
   font-size: 16px;
   font-weight: bold;
+  line-height: 1.5em;
   margin: 1em auto;
   max-width: 500px;
   text-align: center; }
