--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -565,6 +565,12 @@ article
 			&.line1
 				font-weight: bold
 
+	.img
+		background-position: center
+		background-repeat: no-repeat
+		background-size: auto 100%
+		height: 60vh
+
 	.gallery-controls
 		left: -1em
 		position: absolute
@@ -807,7 +813,7 @@ article
 	article
 		margin: 0 auto
 		max-width: 800px
-		width: 70%
+		width: 75%
 
 	.artists
 		li
