--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -669,6 +669,12 @@ article {
       text-transform: uppercase; }
       .post-gallery figcaption div.line1 {
         font-weight: bold; }
+  .post-gallery .img {
+    background-position: center;
+    background-repeat: no-repeat;
+    -webkit-background-size: auto 100%;
+    background-size: auto 100%;
+    height: 60vh; }
   .post-gallery .gallery-controls {
     left: -1em;
     position: absolute;
@@ -884,7 +890,7 @@ article {
   article {
     margin: 0 auto;
     max-width: 800px;
-    width: 70%; }
+    width: 75%; }
 
   .artists li {
     display: inline-block;
