--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -557,6 +557,7 @@ article
 	figcaption
 		letter-spacing: 0.04em
 		margin-top: 0.5em
+		text-align: center
 
 		div
 			font-size: 12px
@@ -569,7 +570,7 @@ article
 		background-position: center
 		background-repeat: no-repeat
 		background-size: auto 100%
-		height: 60vh
+		height: 67vh
 
 	.gallery-controls
 		left: -1em
@@ -973,5 +974,5 @@ article
 		top: 6em
 
 	.post-content
-		margin: 3em auto 0 auto
+		margin: 2em auto 0 auto
 		width: 55%
