View more button for current exhibition

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -180,9 +180,6 @@ article
 	padding: 1em
 	position: relative
 
-	.call-to-action
-		display: block
-
 	.exhibition-content
 		background: white
 		height: 100%
@@ -208,6 +205,9 @@ article
 		font-weight: bold
 		line-height: 1em
 		margin: 1em auto
+
+	.read-more
+		display: inline-block
 
 .exhibition-group
 	display: none
