--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -408,7 +408,7 @@ article
 		font-size: 36px
 		font-weight: bold
 		line-height: 1em
-		margin: 0
+		margin: 0.25em auto
 		text-transform: lowercase
 
 .news-item
@@ -916,7 +916,7 @@ article
 
 		.newsletter-title
 			font-size: 72px
-			margin: 0 auto
+			//margin: 0 auto
 			width: 420px
 
 	.news-item
