--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -540,6 +540,11 @@ article
 .post-content
 	position: relative
 
+	h2
+		font-size: 20px
+		font-weight: bold
+		text-align: center
+
 	p
 		font-size: 14px
 		line-height: 1.8em
