--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -648,6 +648,10 @@ article {
 
 .post-content {
   position: relative; }
+  .post-content h2 {
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center; }
   .post-content p {
     font-size: 14px;
     line-height: 1.8em; }
