Width of artists item list

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -823,10 +823,14 @@ article
 			width: 49%
 
 		&.list
-			width: 60%
+			width: 50%
 
 			li
+				/*padding: 0 1em*/
 				padding-left: 0
+
+				/*&:nth-of-type(odd)
+					text-align: right*/
 
 		&.thumb
 			text-align: center
