--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -415,7 +415,7 @@ article
 	background-repeat: no-repeat
 	background-size: auto 60%
 	box-sizing: border-box
-	margin: 2em auto
+	margin: 2em auto 4em auto
 	max-width: 700px
 	padding: 1em
 	position: relative
