--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -537,7 +537,7 @@ article {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  margin: 2em auto;
+  margin: 2em auto 4em auto;
   max-width: 700px;
   padding: 1em;
   position: relative;
