--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -2,6 +2,9 @@ article
 	padding: 0 1em
 
 	&.exhibition
+		.post-actions
+			top: 0
+
 		.post-title
 			margin-bottom: 0
 			margin-left: auto
@@ -190,7 +193,7 @@ article
 		font-size: 20px
 		font-weight: bold
 		line-height: 1em
-		margin: 0 auto 0.5em auto
+		margin: 0 auto 1em auto
 
 	.exhibition-text
 		font-size: 12px
@@ -204,7 +207,7 @@ article
 		font-size: 32px
 		font-weight: bold
 		line-height: 1em
-		margin: 1em auto
+		margin: 1em auto 0 auto
 
 	.read-more
 		display: inline-block
