Social and other adjustments

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -826,11 +826,11 @@ article
 			width: 49%
 
 		&.list
-			width: 50%
+			width: 60%
 
 			li
 				/*padding: 0 1em*/
-				padding-left: 0
+				padding-left: 15%
 
 				/*&:nth-of-type(odd)
 					text-align: right*/
@@ -976,6 +976,7 @@ article
 		position: absolute
 		right: -9em
 		top: 6em
+		z-index: 9
 
 	.post-content
 		margin: 2em auto 0 auto
