--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -900,10 +900,10 @@ article {
     display: inline-block;
     width: 49%; }
   .artists.list {
-    width: 50%; }
+    width: 60%; }
     .artists.list li {
       /*padding: 0 1em */
-      padding-left: 0;
+      padding-left: 15%;
       /*&:nth-of-type(odd)
        * text-align: right */ }
   .artists.thumb {
@@ -1021,7 +1021,8 @@ article {
   .post-actions {
     position: absolute;
     right: -9em;
-    top: 6em; }
+    top: 6em;
+    z-index: 9; }
 
   .post-content {
     margin: 2em auto 0 auto;
