--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -571,10 +571,12 @@ article
 				font-weight: bold
 
 	.img
-		background-position: center
-		background-repeat: no-repeat
-		background-size: auto 100%
-		height: 67vh
+		height: $carousel_height
+		line-height: $carousel_height
+		text-align: center
+
+		img
+			display: inline-block
 
 	.gallery-controls
 		left: -1em
