--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -674,11 +674,11 @@ article {
       .post-gallery figcaption div.line1 {
         font-weight: bold; }
   .post-gallery .img {
-    background-position: center;
-    background-repeat: no-repeat;
-    -webkit-background-size: auto 100%;
-    background-size: auto 100%;
-    height: 67vh; }
+    height: 67vh;
+    line-height: 67vh;
+    text-align: center; }
+    .post-gallery .img img {
+      display: inline-block; }
   .post-gallery .gallery-controls {
     left: -1em;
     position: absolute;
