Fullscreen for carousel (with bugs)

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -558,6 +558,15 @@ article
 	margin: 0 auto
 	position: relative
 
+	button
+		background: rgba(255, 255, 255, 0.4)
+		border-radius: 2px
+		padding: 0.25em
+		position: absolute
+		right: 1em
+		top: 1em
+		z-index: 999
+
 	figcaption
 		letter-spacing: 0.04em
 		margin-top: 0.5em
@@ -569,6 +578,9 @@ article
 
 			&.line1
 				font-weight: bold
+
+	figure
+		position: relative
 
 	.img
 		height: $carousel_height
