--- a/wp-content/themes/mc2015/css/_state.sass
+++ b/wp-content/themes/mc2015/css/_state.sass
@@ -1,3 +1,17 @@
+.post-gallery
+	+fullscreen()
+		border: 10px solid black
+		padding: 2em
+		width: 100%
+
+		.gallery-controls
+			left: 1em
+			right: 1em
+		
+		.img
+			line-height: $carousel_height_fs
+			height: $carousel_height_fs
+
 @media screen and (max-width: $tablet)
 	.navigation-menu.is-visible
 		background: #222
