--- a/wp-content/themes/mc2015/css/icomoon.css
+++ b/wp-content/themes/mc2015/css/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?x59jhs');
-	src:url('fonts/icomoon.eot?#iefixx59jhs') format('embedded-opentype'),
-		url('fonts/icomoon.woff?x59jhs') format('woff'),
-		url('fonts/icomoon.ttf?x59jhs') format('truetype'),
-		url('fonts/icomoon.svg?x59jhs#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?ssdqh0');
+	src:url('fonts/icomoon.eot?#iefixssdqh0') format('embedded-opentype'),
+		url('fonts/icomoon.woff?ssdqh0') format('woff'),
+		url('fonts/icomoon.ttf?ssdqh0') format('truetype'),
+		url('fonts/icomoon.svg?ssdqh0#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -76,6 +76,9 @@
 }
 .icon-instagram:before {
 	content: "\e610";
+}
+.icon-expand:before {
+	content: "\e613";
 }
 .icon-menu:before {
 	content: "\e602";
