--- a/wp-content/themes/mc2015/css/icomoon.css
+++ b/wp-content/themes/mc2015/css/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?ssdqh0');
-	src:url('fonts/icomoon.eot?#iefixssdqh0') format('embedded-opentype'),
-		url('fonts/icomoon.woff?ssdqh0') format('woff'),
-		url('fonts/icomoon.ttf?ssdqh0') format('truetype'),
-		url('fonts/icomoon.svg?ssdqh0#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?-6r4qsr');
+	src:url('fonts/icomoon.eot?#iefix-6r4qsr') format('embedded-opentype'),
+		url('fonts/icomoon.woff?-6r4qsr') format('woff'),
+		url('fonts/icomoon.ttf?-6r4qsr') format('truetype'),
+		url('fonts/icomoon.svg?-6r4qsr#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
