temporary fix for no content

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -12,7 +12,7 @@ article
 			max-width: 470px
 
 	&.post
-		margin-bottom: 7em
+		margin-bottom: 1em
 
 		.post-actions
 			top: 0
@@ -827,6 +827,9 @@ article
 		margin: 0 auto
 		max-width: 800px
 		width: 75%
+
+		&.post
+			margin-bottom: 14em
 
 	.artists
 		li
