temporary fix for no content

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -828,9 +828,6 @@ article
 		max-width: 800px
 		width: 75%
 
-		&.post
-			margin-bottom: 14em
-
 	.artists
 		li
 			display: inline-block
@@ -960,6 +957,10 @@ article
 			width: 250px
 
 @media screen and (min-width: $desktop)
+	article
+		&.post
+			margin-bottom: 14em
+
 	.artists
 		&.thumb
 			li
