--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -573,6 +573,15 @@ article
 		top: 1em
 		z-index: 999
 
+		&.exit-fs
+			display: none
+			font-size: x-small
+			font-weight: 500
+			text-transform: uppercase
+
+			span
+				font-weight: bold
+
 	figcaption
 		letter-spacing: 0.04em
 		margin-top: 0.5em
