--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -303,6 +303,11 @@ article
 			display: inline-block
 			margin-right: 0.2em
 
+.loader
+	background: url(ajax-loader.gif) center no-repeat
+	height: 100%
+	width: 100%
+
 .logo
 	display: inline-block
 	margin: 0 0.5em
@@ -562,7 +567,10 @@ article
 
 .post-gallery
 	margin: 0 auto
+	height: $carousel_height
 	position: relative
+	//line-height: $carousel_height
+	//text-align: center
 
 	button
 		background: rgba(255, 255, 255, 0.4)
