--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -419,6 +419,11 @@ article {
       display: inline-block;
       margin-right: 0.2em; }
 
+.loader {
+  background: url(ajax-loader.gif) center no-repeat;
+  height: 100%;
+  width: 100%; }
+
 .logo {
   display: inline-block;
   margin: 0 0.5em;
@@ -669,6 +674,7 @@ article {
 
 .post-gallery {
   margin: 0 auto;
+  height: 67vh;
   position: relative; }
   .post-gallery button {
     background: rgba(255, 255, 255, 0.4);
