--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -303,6 +303,11 @@ article
 			display: inline-block
 			margin-right: 0.2em
 
+.loader
+	background: url(ajax-loader.gif) center no-repeat
+	height: 100%
+	width: 100%
+
 .logo
 	display: inline-block
 	margin: 0 0.5em
@@ -561,6 +566,7 @@ article
 	text-align: center
 
 .post-gallery
+	height: $carousel_height
 	margin: 0 auto
 	position: relative
 
