--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -305,7 +305,7 @@ article
 
 .loader
 	background: url(ajax-loader.gif) center no-repeat
-	height: 100%
+	height: 500px
 	width: 100%
 
 .logo
@@ -566,7 +566,6 @@ article
 	text-align: center
 
 .post-gallery
-	height: $carousel_height
 	margin: 0 auto
 	position: relative
 
