--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -421,7 +421,7 @@ article {
 
 .loader {
   background: url(ajax-loader.gif) center no-repeat;
-  height: 100%;
+  height: 500px;
   width: 100%; }
 
 .logo {
@@ -673,7 +673,6 @@ article {
   text-align: center; }
 
 .post-gallery {
-  height: 67vh;
   margin: 0 auto;
   position: relative; }
   .post-gallery figcaption {
