'The garbage under the carpet'

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -567,7 +567,6 @@ article
 
 .post-gallery
 	margin: 0 auto
-	height: $carousel_height
 	position: relative
 	
 	button
@@ -601,9 +600,11 @@ article
 				font-weight: bold
 
 	figure
+		background-color: white
 		position: relative
 
 	.img
+		background-color: white
 		height: $carousel_height
 		line-height: $carousel_height
 		text-align: center
