--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -465,6 +465,45 @@ article
 		width: 100%
 		z-index: 1
 
+.page-numbers
+	list-style-type: none
+	margin: 0 auto
+	padding: 0
+	text-align: center
+	width: auto
+
+	li
+		display: inline-block
+		font-size: 12px
+		font-weight: 500
+		margin: 0 0.5em
+		vertical-align: middle
+
+	.page-numbers
+		display: block
+		padding: 0.5em
+		transition: all 0.3s
+
+		&.next,
+		&.prev
+			background-color: white
+			border-radius: 50%
+			font-size: 22px
+			height: 24px
+			padding: 0
+			width: 24px
+
+			&:hover
+				background-color: black
+				color: white
+
+		&:not(.prev):not(.next)
+			color: rgba(0, 0, 0, 0.3)
+
+			&.current,
+			&:hover
+				color: black
+
 .past-exhibitions
 	margin-top: 8em
 	position: relative
