--- a/wp-content/themes/mc2015/css/icomoon.css
+++ b/wp-content/themes/mc2015/css/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?-6r4qsr');
-	src:url('fonts/icomoon.eot?#iefix-6r4qsr') format('embedded-opentype'),
-		url('fonts/icomoon.woff?-6r4qsr') format('woff'),
-		url('fonts/icomoon.ttf?-6r4qsr') format('truetype'),
-		url('fonts/icomoon.svg?-6r4qsr#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?r66dme');
+	src:url('fonts/icomoon.eot?#iefixr66dme') format('embedded-opentype'),
+		url('fonts/icomoon.woff?r66dme') format('woff'),
+		url('fonts/icomoon.ttf?r66dme') format('truetype'),
+		url('fonts/icomoon.svg?r66dme#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -82,7 +82,4 @@
 }
 .icon-menu:before {
 	content: "\e602";
-}
-.icon-expand:before {
-	content: "\e613";
 }
