Fullscreen disabled for phones

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -626,6 +626,9 @@ article
 			span
 				font-weight: bold
 
+		&.icon-expand
+			display: none
+
 	figcaption
 		letter-spacing: 0.04em
 		margin-top: 0.5em
@@ -1009,6 +1012,9 @@ article
 		display: block
 
 	.post-gallery
+		button.icon-expand
+			display: block
+
 		figcaption
 			div
 				display: inline-block
