--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -420,6 +420,43 @@ article
 		margin: 0.25em auto
 		text-transform: lowercase
 
+.news-filter
+	display: none
+	position: absolute
+	right: 5vw
+	text-align: center
+	text-transform: uppercase
+	top: 4em
+
+	.news-filter-title
+		font-size: 12px
+		font-weight: bold
+
+		&:after
+			border: 1px solid
+			content: ''
+			display: block
+			height: 3em
+			margin: 0.5em auto
+			width: 0
+
+	.filter
+		list-style-type: none
+		margin: 0
+		padding: 0
+
+	.filter-item
+		font-size: 11px
+		font-weight: 500
+		margin: 0.5em
+
+		a
+			color: rgba(0, 0, 0, 0.3)
+
+			&.active,
+			&:hover
+				color: black
+
 .news-item
 	background-repeat: no-repeat
 	background-size: auto 60%
@@ -1004,6 +1041,9 @@ article
 			font-size: 72px
 			//margin: 0 auto
 			width: 420px
+
+	.news-filter
+		display: block
 
 	.news-item
 		padding: 2em 4em
